# BarcodeAmpliconPython

./: README.md  pyproject.toml
barcodes7mer/: __init__.py  barcode_reader.py  chimera.py  cli_barcode_reader.py  cli_extract_keys.py  cli_plot_threshold.py  cli_reduce_mcounts.py  cli_threshold_derivative.py  cli_threshold_regression.py  extract_keys.py  fastq.py  plot_threshold.py  reads_tsv.py  reduce_mcounts.py  threshold_core.py  util.py
chunked_pooled_library_scripts/: combine_mcounts_RUN.sbatch  extract_keys_RUN.sbatch  merge_keys_RUN.sbatch  plot_threshold_RUN.sbatch  reduce_mcounts_RUN.sbatch  runme.sh  split_RUN.sbatch  submit_pipeline.sh  threshold_regression_RUN.sbatch
scripts/: barcode_reader.py  find_threshold_derivative.py  find_threshold_regression.py  plot_threshold.py
